# ZPAD

./: .gitignore  README.md
lab2/: README.md  lab2_part1.ipynb  lab2_part2.ipynb  requirements.txt
lab3/: README.md  lab3.ipynb
lab4/: README.md  lab4.ipynb  requirements.txt
lab5/: README.md  app.py
lab6/: CMakeLists.txt  README.md  build.sh  preinstall.sh  run.sh
lab6/include/: CameraProvider.hpp  Display.hpp  FrameProcessor.hpp  KeyProcessor.hpp
lab6/src/: CameraProvider.cpp  Display.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
lab7/: CMakeLists.txt  README.md  build.sh  preinstall.sh  run.sh
lab7/include/: Display.hpp  FaceDetector.hpp  FrameProcessor.hpp  KeyProcessor.hpp
lab7/src/: Display.cpp  FaceDetector.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
